scss/partials/_columns.scss
.columns {
  margin: 0 auto;
  max-width: 76.2rem;
  padding-left: 0;
  padding-right: 0;

  h3 {
    @extend .h4;
    @include vertical-spacing(sm-3, bottom, margin);
  }

  p:not(:last-child) {
    @include vertical-spacing(md-3, bottom, padding);
  }

  &--post-hero {
    padding-top: 9.6rem;
    
    @include breakpoint(desktop) {
      grid-template-columns: calc(min(62.5rem, 50%)) auto;
      margin-bottom: 9.4rem;
      margin-left: auto;
      margin-right: auto;
      max-width: 144rem;
      padding-top: 27.4rem;
    }

    @include grid();

    p:not(:last-child) {
      margin-bottom: 3rem;
    }

    // Special case for section heading until variablized for a modifier in Velocity
    @at-root #{&} {
      h2.section-heading {
        margin-bottom: 3rem;
        margin-top: 0;
      }
    }
  }

  &--two {
    max-width: 100%;

    @include grid();

    @include breakpoint(tablet) {
      column-gap: 14rem;
      grid-template-columns: repeat(2, 1fr);
    }

    &-left-wide {
      @include grid();
      align-items: center;

      h3 {
        @extend .h4;
        @include vertical-spacing(sm-6, bottom, margin);
      }

      // Selects all the headings from 2nd to n
      p + h3 {
        @include vertical-spacing(md-4, top, margin);
      }

      picture {
        margin-bottom: 6.2rem;
      }

      @include breakpoint(desktop) {
        column-gap: 9.5rem;
        grid-template-columns: 3fr 2fr;
      }
    }
  }

  &--three {
    max-width: 100%;

    @include grid();
    row-gap: 7rem;
    margin: 4.8rem 0;

    [class^="column"] {
      display: flex;
      flex-direction: column;
      margin-bottom: 4.3rem;

      @include breakpoint(tablet) {
        margin-bottom: 8.6rem;
        margin-top: 7.4rem;
      }
    }

    @include breakpoint(tablet) {
      column-gap: 8rem;
      row-gap: 10rem;
      grid-template-columns: repeat(3, 1fr);
    }
  }
}

